[tool.poetry]
name = "squidalytics"
version = "0.1.0"
description = ""
authors = ["Cesar E Garza <cesar@cegarza.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
pandas = "^1.5.0"
genson = "^1.2.2"
bs4 = "^0.0.1"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
mypy = "^0.982"
flake8 = "^5.0.4"
darglint = "^1.8.1"
isort = "^5.10.1"
types-requests = "^2.28.11.2"
ipykernel = "^6.16.0"
pytest = "^7.1.3"
coverage = "^6.5.0"
jsondiff = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 80
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 80

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
pretty = true

[tool.pytest.ini_options]
testpaths = "tests"
addopts = [
    "-v",
    "--tb=auto",
    "--showlocals",
    "--color=yes",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
